--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.css
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.css
@@ -21,9 +21,10 @@ table {
 }
 
 .buttons {
-  width: 30%;
+  width: 80%;
   margin-top: 1%;
-  float: right;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .buttons app-edit-work-button {
