--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.html
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.html
@@ -44,7 +44,7 @@
     <!-- Date Column -->
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let work"> {{work.date | date : 'MMM d, y'}} </td>
+      <td mat-cell *matCellDef="let work"> {{work.date | date : 'EEEE, MMM d, y'}} </td>
     </ng-container>
 
     <!-- Time Column -->
