--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,4 +1,7 @@
-<mat-card>
+<mat-card class="error" *ngIf="error">
+  <mat-card-content>Email already taken</mat-card-content>
+</mat-card>
+<mat-card class="register">
   <mat-card-title>
     <h2>Register</h2>
  </mat-card-title>
