--- a/src/app/components/auth/login/login.component.css
+++ b/src/app/components/auth/login/login.component.css
@@ -4,7 +4,7 @@ mat-card-title {
   padding-bottom: 5%;
 }
 
-mat-card {
+.login {
   height: 35%;
   width: 20%;
   top: 50%;
@@ -45,4 +45,19 @@ a:hover, a:visited, a:active, a:link {
 
 button {
   width: 40%;
+}
+
+.error {
+  height: 1em;
+  width: 20%;
+  justify-content: center;
+  margin: auto;
+  top: 30%;
+  background-color: rgb(220, 80, 80);
+  color: rgb(210, 220, 215);
+}
+
+mat-card-content {
+  justify-content: center;
+  text-align: center;
 }
