Added Http error handlers with dialog messages

--- a/src/app/components/courseTracker/dialog-form/dialog-form.component.html
+++ b/src/app/components/courseTracker/dialog-form/dialog-form.component.html
@@ -33,5 +33,6 @@
     <input matInput type="time" name="time" min="0:00" max="23:59" required ngModel #time="ngModel">
   </mat-form-field>
   <button mat-raised-button color="primary" type="submit">Submit</button>
+  <button mat-raised-button mat-dialog-close color="warn">Cancel</button>
 </form>
 </div>
