--- a/src/app/components/courseAdding/add-course/add-course.component.css
+++ b/src/app/components/courseAdding/add-course/add-course.component.css
@@ -1,5 +1,5 @@
 mat-form-field {
-  /* add spacing between the labels and the inputs */
   margin: 20px;
+  justify-content: center;
+  align-items: center;
 }
-
