--- a/src/app/components/courseAdding/header-course/header-course.component.css
+++ b/src/app/components/courseAdding/header-course/header-course.component.css
@@ -4,6 +4,7 @@ mat-card {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 
 app-back-button {
