--- a/src/app/components/courseTracker/tracker-table/tracker-table.component.css
+++ b/src/app/components/courseTracker/tracker-table/tracker-table.component.css
@@ -20,6 +20,12 @@ table {
   width: 80%;
 }
 
+@media screen and (max-width: 418px) {
+  h1 {
+    font-size: 36px;
+  }
+}
+
 /* media max width of 760 */
 @media screen and (max-width: 760px) {
   table {
@@ -32,6 +38,28 @@ table {
 
   td {
     font-size: small;
+  }
+}
+
+/* media max width of 850 */
+@media screen and (max-width: 850px) {
+    .mat-table {
+    overflow-x: scroll;
+  }
+
+  .mat-cell, .mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 10px;
+    line-break: unset;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+  }
+
+  .mat-row, .mat-header-row {
+    display: table-row;
   }
 }
 
